[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-world-model-reasoner"
version = "0.1.0"
description = "A dependency-light prototype of the Adaptive World-Model Reasoner architecture."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AWR contributors" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
awr = "awr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
